<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272931"
    android:backgroundTint="#272931"
    tools:context=".HowToActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="60dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introKey"
                android:textColor="#FFFFFF"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/par1Key"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howToKey"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/par2Key"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rulesKey"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notesKey"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteBulletsKey"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditsKey"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditsDetailsKey"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoutoutsKey"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>