<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272931"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/score2MinusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="#118DF0"
        android:minWidth="48dip"
        android:text="@string/minusKey"
        android:textColor="#F4F4F4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/score1PlusButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/score2PlusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="#118DF0"
        android:minWidth="48dip"
        android:text="@string/plusKey"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/score2MinusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <Button
        android:id="@+id/score1MinusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF304F"
        android:minWidth="48dip"
        android:text="@string/minusKey"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score1Text" />

    <TextView
        android:id="@+id/char1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="Char1"
        android:textColor="#CECECE"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/char2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Char2"
        android:textColor="#CECECE"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/char1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/flip1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF304F"
        android:text="@string/flipCharKey"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/char1Text" />

    <Button
        android:id="@+id/flip2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#118DF0"
        android:text="@string/flipCharKey"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/flip1Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/genCharsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/genCharKey"
        android:textColor="#272931"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flip1Button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/scoreKey"
        android:textColor="#CECECE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genCharsButton" />

    <TextView
        android:id="@+id/score1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#CECECE"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/score2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#CECECE"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/score1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charsKey"
        android:textColor="#CECECE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/score1PlusButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="#FF304F"
        android:minWidth="48dip"
        android:text="@string/plusKey"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/score1MinusButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/resetKey"
        android:textColor="#272931"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score1PlusButton" />

    <ImageView
        android:id="@+id/stockIcon2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#118DF0"
        app:layout_constraintBottom_toBottomOf="@+id/stockIcon1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:srcCompat="@drawable/mario" />

    <ImageView
        android:id="@+id/stockIcon1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#FF304F"
        app:layout_constraintBottom_toTopOf="@+id/char1Text"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/mario" />

</androidx.constraintlayout.widget.ConstraintLayout>